[tool.black]
line-length = 120
target-version = "py38"

[tool.flake8]
line_length = 120
based_on_style = "pep8"
column_limit = 120
indent_width = 4
spaces_before_comment = 2
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
DEDENT_CLOSING_BRACKETS = true
EACH_DICT_ENTRY_ON_SEPARATE_LINE = true
COALESCE_BRACKETS = true
USE_TABS = false
ALLOW_MULTILINE_LAMBDAS = true
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
INDENT_DICTIONARY_VALUE = true
SPLIT_BEFORE_EXPRESSION_AFTER_OPENING_PAREN = true
DISABLE_ENDING_COMMA_HEURISTIC = true

[tool.isort]
line_length = 120
multi_line_output = 5
include_trailing_comma = true
known_future_library = "future"
known_third_party = "requests,fire"
known_first_party = "risc,utils,main"
default_section = "THIRDPARTY"
indent = "    "
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.pylint]
line_length = 120

[tool.poetry]
name = "risc"
version = "0.2.0"
description = "Python client and CLI for RISC"
authors = ["Mark Beacom <mbeacom@2ndwatch.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/2ndWatch/risc-python"
homepage = "https://github.com/2ndWatch/risc-python"
keywords = [
    "risc",
    "flexera",
    "cli",
    "terminal",
    "api",
    "cloud",
    "discovery",
    "profiling",
    "rest",
    "client",
]
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS 9",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: MS-DOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 8.1",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
isort = {extras = ["pyproject"], version = "^4.3.21"}
yapf = "^0.29.0"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-isort = "^0.3.1"
pytest-sugar = "^0.9.2"
black = "^19.10b0"
pydocstyle = "^5.0.2"
pycodestyle = "^2.5.0"
bandit = "^1.6.2"
mypy = "^0.761"
pylint = "^2.4.4"
flake8 = "^3.7.9"
pydoc-markdown = "^2.1.1"
pymdown-extensions = "^6.3"
mkdocs = "^1.1"
mkdocs-material = "^4.6.3"

[tool.poetry.extras]
pandas = ["pandas"]

[tool.poetry.scripts]
risc = "risc.main:main"

[tool.portray.mkdocs.theme]
name = "material"
palette = {primary = "blue", accent = "light blue"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
